added comments in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,11 +243,11 @@ input[type=submit] {
   opacity: 0.8;
 }
 
+/* Media queris for 980 px width*/
+
 @media screen and (max-width: 980px) {
   /* The body's bg color will be #333 */
-  body {
-    background: url("../images/concrete_seamless.png");
-  }
+  
   .main-section { 
     width: 55%;
   }
@@ -270,11 +270,11 @@ input[type=submit] {
 
 }
 
+/* Media queris for 768 px width*/
+
 @media screen and (max-width: 768px) {
   /* The body's bg color will be #333 */
-  body {
-    background: url("../images/concrete_seamless.png");
-  }
+ 
   .main-section { 
     width: 100%;
     float: none;
@@ -305,11 +305,11 @@ input[type=submit] {
 
 }
 
+/* Media queris for 640 px width*/
+
 @media screen and (max-width: 640px) {
-  /* The body's bg color will be #333 */
-  body {
-    background: url("../images/concrete_seamless.png");
-  }
+  
+
   .auth-image { 
     float: none;
     width: 100%;
